...
                )
            }
        }
    ) { contentPadding ->
        LazyColumn(
            modifier = Modifier.fillMaxSize()
                .testTag("chat-list")
                .nestedScroll(scrollConnection)
                .onPreRotaryScrollEvent {
                    if (it.verticalScrollPixels < 0) followLatest = false
                    false
                }
                .requestFocusOnHierarchyActive()
...
